Regression: Crash when renaming a modifier when other modifier's visibility is driven by a driver #100820

Closed
opened 2022-09-05 01:50:05 +02:00 by Pavel Duong · 7 comments

System Information
Operating system: Arch Linux
Graphics card: Intel UHD 620

Blender Version
Broken: 3.4
Worked: 3.3
Caused by f12f7800c2

Short description of error

When renaming a modifier while its visibility is (or any other in the stack) driven by a driver will cause a crash.

Exact steps for others to reproduce the error

  1. Add a modifier to a object
  2. Add a driver to Viewport visibility
  3. Rename the modifier
  4. Crash
    #100820.blend
    modifier_rename_crash.mp4
**System Information** Operating system: Arch Linux Graphics card: Intel UHD 620 **Blender Version** Broken: 3.4 Worked: 3.3 Caused by f12f7800c2 **Short description of error** When renaming a modifier while its visibility is (or any other in the stack) driven by a driver will cause a crash. **Exact steps for others to reproduce the error** 1. Add a modifier to a object 2. Add a driver to Viewport visibility 3. Rename the modifier 4. Crash [#100820.blend](https://archive.blender.org/developer/F13460448/T100820.blend) [modifier_rename_crash.mp4](https://archive.blender.org/developer/F13460258/modifier_rename_crash.mp4)
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

Crash occurs since f12f7800c2
@Sergey ^

Crash occurs since f12f7800c2 @Sergey ^

This issue was referenced by 91b1ca5b7b

This issue was referenced by 91b1ca5b7b55cde3d344b03a1eba57df139e0f7c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-09-05 10:41:24 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#100820
No description provided.