Fix T100820: Crash renaming modifier with visibility driver